--- a/Frontend/css/profile-style.css
+++ b/Frontend/css/profile-style.css
@@ -8,6 +8,12 @@
 
 /* fucking menu stilization */
 
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800;900&display=swap');
+
+body {
+    font-family: 'Nunito', sans-serif;
+}
+
 .wrapper {
   position: relative;
   overflow-x: hidden;
@@ -122,10 +128,63 @@
   transition: 0.5s;
   position: relative;
   z-index: 0;
+  transform: translateX(5%);
 }
 .content_active {
-  transform: translateX(30%);
+  transform: translateX(20%);
 }
+
+.base-info {
+  height: 40%;
+  /*width: 70%;*/
+  padding: 5%;
+  margin-left: 5%;
+  justify-content: space-around;
+}
+
+.base-info h2 {
+  font-size: 420%;
+}
+
+.base-info h3 {
+  font-size: 320%;
+}
+
+
+
+.photo {
+  height: 40%;
+  border-radius: 20px;
+}
+
+.logo {
+  align-items: center;
+  height: 25%;
+}
+
+.belt-id {
+  align-items: center;
+  margin:  auto;  
+}
+
+.belt-id button {
+  border: 1px solid black;
+  border-radius: 25px;
+  background-color: ghostwhite;
+  padding: 7%;
+  margin:  5%;
+  font-size: 2vw;
+  font-weight: bolder;
+  color: #134F8C;
+  text-align: center;
+}
+
+.belt-id img {
+  margin: 5%;
+}
+
+
+
 
 
 
@@ -134,6 +193,21 @@
     .menu {
       width: 50vw;
     }
+
+  .content_active {
+    transform: translateX(5%);
+  }
+
+  .photo {
+    height:  80%;
+  }
+
+  .logo-id-block button {
+    width: 15vh;
+    font-size: 3vh;
+  }
+
+
 }
 
 
