--- a/Frontend/css/profile-style.css
+++ b/Frontend/css/profile-style.css
@@ -134,15 +134,19 @@ body {
 }
 
 
+/*styles for content block*/
 .content {
   transition: 0.5s;
   position: relative;
   z-index: 0;
   transform: translateX(5%);
 }
+
+/*move content block when menu is opened*/
 .content_active {
   transform: translateX(20%);
 }
+
 
 .base-info {
   height: 40%;
@@ -268,6 +272,35 @@ body {
 }
 
 
+.seminar-table {
+  border: 1px solid black;
+  border-radius: 20px;
+
+  margin: 5% 0;
+  padding: 2% 0;
+
+  text-align: center;
+  font-size: 1.5vw;
+}
+
+.seminar-table table {
+  width: 100%;
+}
+
+.seminar-table table td {
+  width: 25%;
+}
+
+.heading {
+  font-size: 1.7vw;
+  font-weight: bolder;
+}
+
+.bordered {
+  border-left: 1px solid gray;
+  border-right: 1px solid gray;
+}
+
 
 /*styles for different resolutions */
 @media all and (max-width: 1000px){
@@ -275,8 +308,12 @@ body {
       width: 50vw;
     }
 
+  .content {
+    transform: translateX(10%);
+  }
+
   .content_active {
-    transform: translateX(5%);
+    transform: translateX(10%);
   }
 
   .photo {
@@ -290,6 +327,17 @@ body {
 
   .achievment-block {
     margin: 7% 1%;
+  }
+
+
+
+  .unvisible {
+    display: none;
+  }
+
+  .seminar-table table td {
+  width: 50%;
+  font-size: 2.5vw;
   }
 
 }
