--- a/Frontend/css/auth-style.css
+++ b/Frontend/css/auth-style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800;900&display=swap');
 
+html {
+    overflow: hidden;
+}
+
 body {
     background-image: url("../assets/background.png");
     font-family: 'Nunito', sans-serif;
