--- a/Frontend/css/menu-style.css
+++ b/Frontend/css/menu-style.css
@@ -124,3 +124,39 @@ body {
 .description {
     flex: 2;
 }
+
+.content {
+    transition: 0.5s;
+    position: relative;
+    z-index: 0;
+    transform: translateX(5%);
+}
+
+/*move content block when menu is opened*/
+.content_active {
+    transform: translateX(20%);
+}
+
+@media all and (max-width: 1000px) {
+    .menu {
+        width: 50vw;
+    }
+
+    .logo-id-block button {
+        width: 15vh;
+        font-size: 3vh;
+    }
+
+    .unvisible {
+        display: none;
+    }
+
+    .content {
+        transform: translateX(10%);
+    }
+
+    .content_active {
+        transform: translateX(10%);
+    }
+
+}
