--- a/Frontend/css/adding-members-style.css
+++ b/Frontend/css/adding-members-style.css
@@ -165,6 +165,10 @@ body {
     .content_active {
         transform: translateX(10%);
     }
+
+    .abc{
+        overflow-x: hidden;
+    }
 }
 
 input{
@@ -189,11 +193,11 @@ body{
     margin-bottom: 30px;
 }
 
-.bordered{
+.add_to_applic{
     color: white;
     background-color: #0417b4;
     border-radius: 30px;
-    border: midnightblue;
+    border-color: mediumblue;
     box-shadow: 0.2em 0.2em 2px rgba(122, 122, 122, 0.5);
     min-height: 20px;
     position: relative;
@@ -235,6 +239,8 @@ td:nth-last-child(1){
     overflow: auto;
     width: 100%;
 }
+
+
 
 
 
