--- a/Frontend/css/creation-style.css
+++ b/Frontend/css/creation-style.css
@@ -13,9 +13,7 @@ body{
     justify-content: center;
 }
 
-div:nth-of-type(.location){
-    margin: 30px;
-}
+
 
 .dAndL{
     display: flex;
@@ -26,16 +24,13 @@ div:nth-of-type(.location){
 
 .date{
     margin-right: 110px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
 
 .location{
-    margin-top: 5%;
     margin-bottom: 5%;
-    margin-left: 8%;
-    width: 350px;
-    min-width: 250px;
+
 }
 
 input{
@@ -51,13 +46,13 @@ input{
     padding-right: 15px;
 }
 
-.bordered{
+.create_butt{
     display: block;
     margin: 50px;
     color: white;
     background-color: darkblue;
     border-radius: 10px;
-    border-color:red;
+    border-color: midnightblue;
     box-shadow: 0.2em 0.2em 2px rgba(122, 122, 122, 0.5);
     width: 120px;
     height: 35px;
