--- a/Frontend/css/service-page-style.css
+++ b/Frontend/css/service-page-style.css
@@ -200,7 +200,7 @@ body {
     color: white;
     background-color: darkblue;
     border-radius: 7px;
-    border: midnightblue;
+    border-color: midnightblue;
     box-shadow: 0.2em 0.2em 2px rgba(122, 122, 122, 0.5);
 }
 
@@ -208,7 +208,7 @@ body {
     color: white;
     background-color: darkblue;
     border-radius: 7px;
-    border: midnightblue;
+    border-color: midnightblue;
     box-shadow: 0.2em 0.2em 2px rgba(122, 122, 122, 0.5);
 }
 
@@ -216,7 +216,8 @@ body {
     color: white;
     background-color: orange;
     border-radius: 7px;
-    border: darkorange;
+    border-color: darkorange;
+    border-width: 0.1px;
     box-shadow: 0.2em 0.2em 2px rgba(122, 122, 122, 0.5);
 }
 
@@ -252,7 +253,7 @@ body {
     width: 25%;
    /* position: relative;
     right: 25%;*/
-    margin-left: 12%;
+    margin-left: 8%;
     padding-left: 2%;
     text-align: center;
     margin-bottom: 2%;
