Добавлен функционал для кнопки загрузки отчета

--- a/Frontend/css/seminar-style.css
+++ b/Frontend/css/seminar-style.css
@@ -22,6 +22,7 @@ body {
     font-size: 120%;
     color: white;
     border-radius: 20px;
+    border: 1px solid white;
     text-align: center;
     padding-right: 5%;
 
@@ -35,7 +36,8 @@ body {
     background-position: 90%;
     padding-top: 1.2%;
     padding-bottom: 1.2%;
-}
+    box-shadow: 0.2em 0.2em 2px rgba(122, 122, 122, 0.5);
+    }
 
 .upload {
     background: #134F8C;
@@ -45,6 +47,13 @@ body {
     background-size: 15%;
     background-repeat: no-repeat;
     background-position: 90%;
+    box-shadow: 0.2em 0.2em 2px rgba(122, 122, 122, 0.5);
+}
+
+.input-file {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
 }
 
 .seminar-stat {
