Скриптовое появление меню
Меню появляется по скрипту menu-inserting перед блоком ".container"

--- a/Frontend/css/menu-style.css
+++ b/Frontend/css/menu-style.css
@@ -49,6 +49,7 @@ body {
 }
 
 .menu_active .text-a {
+    font-family: 'Nunito', sans-serif;
     display: block;
     transition: display 600ms linear;
 }
