--- a/Frontend/css/clubs-style.css
+++ b/Frontend/css/clubs-style.css
@@ -135,4 +135,35 @@ img {
     font-weight: bold;
 }
 
+.accept-block {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(30px);
+    z-index: 100;
+    text-align: center;
+    padding: 10%;
+}
+
+.accept-block h3 {
+    text-shadow: 0px 0px 3px white;
+}
+
+.accept-block p {
+    font-size: 4vh;
+}
+
+.accept-block button {
+    width: 15vw;
+    height: 7vh;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 10%;
+    border: 1px solid black;
+    border-radius: 25px;
+    background-color: ghostwhite;
+    color: black;
+    font-size: 3vh;
+}
+
 
