--- a/Frontend/css/federation-coaches-style.css
+++ b/Frontend/css/federation-coaches-style.css
@@ -15,6 +15,7 @@ h1 {
     width: 80%;
     margin-left: 8%;
     margin-top: 3%;
+    padding-bottom: 2%;
 }
 
 .align-items-start{
@@ -33,6 +34,7 @@ h1 {
 
 .bordered-2{
     border-right: 1px solid black;
+    margin-bottom: 0;
 }
 
 .add_trainer {
