--- a/Frontend/css/profile-style.css
+++ b/Frontend/css/profile-style.css
@@ -64,7 +64,7 @@
 
 .card-block {
   text-align: center;
-  margin: 2% auto 5%;
+  margin: 2% auto 7%;
 }
 
 .card-block h3 {
@@ -112,6 +112,15 @@
   font-size: 140%;
 }
 
+.header-block {
+  width: 100%;
+}
+
+.header-block button {
+  width: 5%;
+  background-color: white;
+  border: none;
+}
 
 .achievment-table {
   justify-content: space-between;
@@ -123,8 +132,14 @@
   margin-bottom: 3%;
 }
 
-.achievment h2 {
+.hide-block-header {
+  margin-bottom: 2%;
+  margin-top: 2%;
   font-weight: bold;
+}
+
+.hide-block-header:hover {
+  text-decoration: underline;
 }
 
 .achievment-block {
@@ -187,12 +202,27 @@
 }
 
 
+
+/*Styles for events tables*/
+
+.table-name {
+  text-align: center;
+  margin-top: 4%;
+  font-weight: bolder;
+}
+
+.scroll {
+  max-height: 300px;
+  overflow: auto;
+}
+
+
 .seminar-table {
   border: 1px solid black;
   border-radius: 20px;
 
-  margin: 5% 0;
-  padding: 2% 0;
+  margin: 2% 0;
+  padding: 2% 1%;
 
   text-align: center;
   font-size: 1.5vw;
@@ -209,6 +239,7 @@
 .heading {
   font-size: 1.7vw;
   font-weight: bolder;
+
 }
 
 .bordered {
