--- a/Frontend/css/add_new_trainer.css
+++ b/Frontend/css/add_new_trainer.css
@@ -1,3 +1,36 @@
+.accept-block {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(30px);
+    z-index: 100;
+    text-align: center;
+    padding: 10%;
+}
+
+.accept-block h3 {
+    text-shadow: 0px 0px 3px white;
+}
+
+.accept-block p {
+    font-size: 4vh;
+}
+
+.accept-block button {
+    width: 15vw;
+    height: 7vh;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 10%;
+    border: 1px solid black;
+    border-radius: 25px;
+    background-color: ghostwhite;
+    color: black;
+    font-size: 3vh;
+}
+
+
+
 .content {
     text-align: center;
     padding-top: 2%;
@@ -111,6 +144,11 @@ input {
     font-size: 3.7vh;
     color: white;
 
+}
+
+.delete-button {
+    background-color: red;
+    border: darkred;
 }
 
 @media all and (max-width: 600px) {
